--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "php": ">=5.4",
         "ext-mbstring": "*",
+        "psr/log": "~1.0",
         "swiftmailer/swiftmailer": "~4.2|~5.0"
     },
     "require-dev": {
